# Newton-Raphson-Solver

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  Equation.cpp  Equation.h  Solver.cpp  Solver.h  equations.cpp  equations.h  helper.h  main.cpp  solver.cpp  solver.h  test.cpp
test/: CMakeLists.txt  helper.cpp  helper.h  test.cpp
